--- a/Yet_another_copy_of_phy122_N1Lt.ipynb
+++ b/Yet_another_copy_of_phy122_N1Lt.ipynb
@@ -16,8 +16,8 @@
         "id": "oKNK3iMn79o0"
       },
       "source": [
-        "Phy 122 Lab 1\n",
-        "Raul Guillen\n",
+        "Phy 122 Lab 1\n\n",
+        "Raul Guillen\n\n",
         "26Oct2024"
       ]
     },
