--- a/phy122_N2L.ipynb
+++ b/phy122_N2L.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM477Bmqguf8ChpmHaPHAFA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jcandane/PhysicsI_Labs/blob/main/phy122_N2L.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rguille3/PhysicsI_Labs/blob/main/phy122_N2L.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,7 +63,7 @@
       "metadata": {
         "id": "Ac_qX-LwUh9U"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +87,7 @@
         "T  = arange(t0, tf, dt)\n",
         "\n",
         "print(T)\n",
-        "print(\"we have \" + str(len(T)) + \" time points\") "
+        "print(\"we have \" + str(len(T)) + \" time points\")"
       ],
       "metadata": {
         "id": "B2jcaI6FUm-N",
@@ -97,7 +96,7 @@
         },
         "outputId": "d7faa72c-138a-4aff-ff2f-86ddcd4b46cd"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +142,7 @@
       "metadata": {
         "id": "Tiap5DaYUqq_"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +163,7 @@
       "metadata": {
         "id": "yptqucSvVpMB"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +193,7 @@
       "metadata": {
         "id": "uc2izrOlWjwJ"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +216,7 @@
       "metadata": {
         "id": "pp9caFz9935y"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +235,7 @@
         "fig.suptitle('Experiment I')\n",
         "fig.subplots_adjust(hspace=0.01, wspace=0.25, right=2)\n",
         "\n",
-        "ax1.scatter(T, R_tx[:,0])\n",
+        "ax1.scatter(T, R_tx[:,0], label = \"Position\")\n",
         "ax1.set_title(\"Position\")\n",
         "ax1.set(xlabel='time (s)', ylabel='Position (m)')\n",
         "\n",
@@ -260,7 +259,7 @@
         "id": "8AehYoqXW9-T",
         "outputId": "f655c76f-e5f9-4f57-abb2-c2a407d4adfd"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -316,7 +315,7 @@
         "id": "vb6EiILCXG_y",
         "outputId": "746d4253-ebd9-4942-a561-6ca4cf223ee9"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -347,13 +346,13 @@
       "cell_type": "code",
       "source": [
         "x_0  = array([1., 0., 0.]) ## m : initial position vector/array\n",
-        "v_0  = array([5., 0., 0.]) ## m/s : initial velocity vector/array \n",
+        "v_0  = array([5., 0., 0.]) ## m/s : initial velocity vector/array\n",
         "m    = 5.0 ## kg : mass of your particle"
       ],
       "metadata": {
         "id": "O20O-sDKZPqc"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +384,7 @@
         "id": "I5XfTBf2ZXIR",
         "outputId": "6262bdb9-a3b3-4b09-c395-18a221ff8905"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -428,7 +427,7 @@
       "metadata": {
         "id": "TuVZ4fheZYd1"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +450,7 @@
       "metadata": {
         "id": "E4lEt98GZacU"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +493,7 @@
         "id": "EZ1RA-MeZbo0",
         "outputId": "9fc12d51-8d72-4174-ae5c-727a2f29211d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -531,7 +530,7 @@
       "metadata": {
         "id": "PBUONJ6QaYCX"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +551,7 @@
         "\n",
         "T  = arange(t0, tf, dt) ## make time-array\n",
         "\n",
-        "print(\"we have \" + str(len(T)) + \" time points\") "
+        "print(\"we have \" + str(len(T)) + \" time points\")"
       ],
       "metadata": {
         "id": "KCy2u0rLaqxT",
@@ -561,7 +560,7 @@
         },
         "outputId": "6f03bde3-eb76-4561-e43d-472ccc854ec2"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +601,7 @@
         "id": "VuSAJ1W6aZsB",
         "outputId": "e9cbecab-a108-4796-958b-c97786c2d0f1"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -645,7 +644,7 @@
       "metadata": {
         "id": "kvOH7sXGaaoY"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -668,7 +667,7 @@
       "metadata": {
         "id": "4a3o61dTaxUO"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -713,7 +712,7 @@
         "id": "5HESitz4axl4",
         "outputId": "f03e8bc1-f815-4f55-8df6-45e4308052c0"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
