--- a/phy122_RMt_Raul.ipynb
+++ b/phy122_RMt_Raul.ipynb
@@ -753,7 +753,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This plot compares the square root of the experimental force data (red points) with a linear fit (blue line). The linear relationship suggests a direct proportionality between the square root of force and velocity, consistent with theoretical predictions for this system. The alignment between the data and the linear fit validates the simulation and reinforces the assumption of linear scaling in this regime."
+        "This plot compares the square root of the experimental force data (red points) with a linear fit (blue line). The linear relationship suggests a direct proportionality between the square root of force and velocity, consistent with theoretical predictions for this system. The alignment between the data and the linear fit validates the simulation and reinforces the assumption of linear scaling."
       ],
       "metadata": {
         "id": "WyWyz7is0nEY"
@@ -805,7 +805,7 @@
       "cell_type": "markdown",
       "source": [
         "This scatter plot examines the relationship between the average force and the square of the velocity. The red points represent the simulated data, while the blue line shows the linear fit. The observed quadratic dependence of force on velocity is consistent with physical models where the force scales with\n",
-        "v^2. This plot highlights the relevance of quadratic scaling laws in understanding the dynamics of the system."
+        "v^2."
       ],
       "metadata": {
         "id": "VkuzNNlu0lyn"
