--- a/phy122_RMt_Raul.ipynb
+++ b/phy122_RMt_Raul.ipynb
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 645,
+      "execution_count": 49,
       "metadata": {
         "id": "TWlI_-aaNKz3"
       },
@@ -131,13 +131,13 @@
       ],
       "metadata": {
         "id": "b4HkF7qfjm_o",
-        "outputId": "db5b2dcd-2242-4cfd-9e86-c08542e63ce3",
+        "outputId": "4a0094b2-cd49-482b-beef-3772338e8734",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 431
         }
       },
-      "execution_count": 646,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "SQ5qMQiusn6r"
       },
-      "execution_count": 647,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -243,13 +243,13 @@
       ],
       "metadata": {
         "id": "Lq-KobdN_9xj",
-        "outputId": "162e1c22-d174-441b-ca60-74236497d35c",
+        "outputId": "eb2a596f-dcda-44e3-c9d0-a37415ab355a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
         }
       },
-      "execution_count": 648,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "display_data",
@@ -332,9 +332,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 497
         },
-        "outputId": "edc63c11-f3fe-48dc-fcae-d5885ffbddc8"
+        "outputId": "713c1378-0231-4e77-c21f-eb0c58572f7c"
       },
-      "execution_count": 649,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "display_data",
@@ -397,9 +397,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 489
         },
-        "outputId": "f08b03f1-0abe-470a-c983-9050e951ec65"
+        "outputId": "6a85b276-b5e9-457c-9730-e49aead471cd"
       },
-      "execution_count": 650,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +409,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 650
+          "execution_count": 54
         },
         {
           "output_type": "display_data",
@@ -488,9 +488,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
-        "outputId": "75e5be66-0ab9-4722-f438-91873f40b80b"
+        "outputId": "a19a2d6d-a632-48b5-d053-803465732258"
       },
-      "execution_count": 651,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "display_data",
@@ -545,7 +545,7 @@
       "metadata": {
         "id": "6rcp2sxIZYKI"
       },
-      "execution_count": 652,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -570,7 +570,7 @@
       "metadata": {
         "id": "EOM_-tguaPDT"
       },
-      "execution_count": 653,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "3dywnlORRHMv"
       },
-      "execution_count": 654,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -624,9 +624,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 489
         },
-        "outputId": "83382456-8d98-4562-ceee-e490cef17d9a"
+        "outputId": "8ca135a5-039a-43ac-b63d-5cd4358d6e78"
       },
-      "execution_count": 655,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 655
+          "execution_count": 59
         },
         {
           "output_type": "display_data",
@@ -685,9 +685,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b39c83dc-1890-4dc5-fe84-07a1cfe8d0bb"
+        "outputId": "af1a87f8-82d9-4480-d9ca-e0656d74a58a"
       },
-      "execution_count": 656,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,9 +724,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 489
         },
-        "outputId": "160ec43d-0405-4e3a-abf4-dda2c293250b"
+        "outputId": "4dc24deb-6906-4e11-81e3-c69be9f1a8c1"
       },
-      "execution_count": 657,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +736,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 657
+          "execution_count": 61
         },
         {
           "output_type": "display_data",
@@ -785,9 +785,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 477
         },
-        "outputId": "a3054a82-5928-46e4-d239-f30438b58456"
+        "outputId": "1ace37d6-a3e5-4e8e-e802-367974607cd1"
       },
-      "execution_count": 658,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,13 +813,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "V_bCVgEg8imm"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "#   <font color='Red'> **Experiment 3** </font>\n",
         "\n",
@@ -838,14 +831,13 @@
         "tf = 3  # Final time (s)\n",
         "TT = np.arange(t0, tf, dt)  # Time array\n",
         "\n",
-        "v_range = np.arange(0.1, 3, 0.1)  # Speed range (0.1 m/s to 3 m/s with 0.1 intervals)\n",
-        "f_v = np.zeros(len(v_range))  # Empty array to store average forces\n",
-        "\n",
+        "radius_range = np.arange(0.1, 3, 0.1)  # radius range\n",
+        "f_r = np.zeros(len(v_range))  # Empty array to store average forces\n",
         "\n",
         "\n",
         "# Simulation loop\n",
-        "for i in range(len(v_range)):\n",
-        "    vi = v_range[i] * np.array([0, 1., 0])  # Current speed\n",
+        "for i in range(len(radius_range)):\n",
+        "    ri = radius_range[i] * np.array([1.0, 0, 0])  # Current speed\n",
         "    x_t, v_t, f_t = VelocityVerletRot(T=TT, x0=np.array([1., 0., 0.]), v0=vi, mass=1.)\n",
         "    f = np.linalg.norm(f_t, axis=1)\n",
         "    f_avg = np.sum(f) / len(f)  # Average force\n",
@@ -892,9 +884,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "bcf408ce-2ef5-4d02-cebc-1480354dcd25"
+        "outputId": "189ea12b-e3a4-4ec6-c888-fe8e05bb4d91"
       },
-      "execution_count": 659,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "display_data",
@@ -934,7 +926,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 659
+          "execution_count": 63
         }
       ]
     },
@@ -949,11 +941,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Parameters\n",
+        "dt = 0.01  # Time step (s)\n",
+        "t0 = 0.0  # Initial time (s)\n",
+        "tf = 3  # Final time (s)\n",
+        "TT = np.arange(t0, tf, dt)  # Time array\n"
+      ],
       "metadata": {
         "id": "n0tRfvadcYJH"
       },
-      "execution_count": 659,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -971,7 +969,7 @@
       "metadata": {
         "id": "MZhpx73Acc10"
       },
-      "execution_count": 659,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -989,7 +987,7 @@
       "metadata": {
         "id": "fWOEbONtc6zz"
       },
-      "execution_count": 659,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1014,7 +1012,7 @@
       "metadata": {
         "id": "GcaLN46xdD39"
       },
-      "execution_count": 659,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1032,7 +1030,7 @@
       "metadata": {
         "id": "NX6VQ2Bvef4F"
       },
-      "execution_count": 659,
+      "execution_count": 64,
       "outputs": []
     },
     {
