--- a/phy122_RMt_Raul.ipynb
+++ b/phy122_RMt_Raul.ipynb
@@ -936,6 +936,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The plot shows how the force decreases as the radius increases. This happens because the centripetal force is inversely proportional to the radius, meaning smaller radii require much more force to keep the object moving in a circle at the same speed. As the radius gets larger, the force decreases more slowly, resulting in the curve flattening out."
+      ],
+      "metadata": {
+        "id": "uw32yKUDKHnd"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "-srUTF8hBo6t"
@@ -1031,6 +1040,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The plot shows a linear fit of force vs. 1/radius, with experimental data as red points and the theoretical model as a blue line. The slope (0.959N/m) is close to the theoretical value (1.0N/m), confirming the expected inverse relationship between force and radius. Small differences are likely due to numerical approximations in the simulation."
+      ],
+      "metadata": {
+        "id": "yN0DaesTLHa4"
+      }
     },
     {
       "cell_type": "markdown",
