--- a/phy122_RMt_Raul.ipynb
+++ b/phy122_RMt_Raul.ipynb
@@ -42,11 +42,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Title of Work\n",
+        "Lab 5\n",
         "\n",
-        "Name\n",
+        "Raul Guillen\n",
         "\n",
-        "Date"
+        "11/29/2024"
       ],
       "metadata": {
         "id": "ktbMd1V1U2FG"
@@ -1064,10 +1064,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your Conclusion here"
+        "This lab focuses on the physics of circular motion and the numerical methods used to simulate it. In uniform circular motion, an object moves with constant speed along a circular path, but its velocity continuously changes direction. This change in direction requires centripetal acceleration, which always points toward the center of the circle. The force causing this acceleration, the centripetal force, depends on the object's mass, speed, and the radius of the circle (F=mv^2/r).\n",
+        "\n",
+        "The lab also explores how position, velocity, and acceleration are related. Velocity is the time derivative of position, and acceleration is the time derivative of velocity. These relationships are simulated using the Velocity Verlet method, a numerical integration technique that calculates motion over small time steps. This method ensures accurate updates of position and velocity when forces (like centripetal force) act on the object.\n",
+        "\n",
+        "By varying parameters like speed and radius, the lab examines how force changes in response, validating theoretical relationships like F is proportional to v^2 and F ir proportional to 1/r.\n",
+        "\n",
+        "Importance of the Integration Time Step (dt) in Simulations\n",
+        "\n",
+        "The integration time step (dt) is critical for accuracy in simulations. If dt is too large, errors in calculating position and velocity build up, distorting the trajectory. For circular motion, this can cause the path to spiral outward or collapse inward, deviating from the physical model. A smaller dt ensures updates are accurate and the motion stays true to the real system, but it requires more computational effort. Balancing accuracy and efficiency is essential.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "r5QcxHQvfy0Y"
+        "id": "NJPLtH7sL8-k"
       }
     },
     {
@@ -1081,7 +1092,9 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Uniform circular motion refers to motion at a constant speed along a circular path. While the speed is constant, the velocity vector continuously changes direction, resulting in centripetal acceleration. This acceleration, directed toward the circle's center, changes the direction of velocity without affecting its magnitude, keeping the motion circular. The term \"uniform\" describes the constant speed, even though the velocity direction changes due to acceleration."
+      ],
       "metadata": {
         "id": "81lGbz7wBS_m"
       }
@@ -1097,7 +1110,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Velocity Vector: At any point, the velocity vector is tangential to the circular path, pointing in the direction of motion.\n",
+        "\n",
+        "Acceleration Vector: The acceleration vector points toward the center of the circle at all times, as it is responsible for changing the direction of velocity to maintain circular motion."
+      ],
       "metadata": {
         "id": "fCu_YPfPBTMN"
       }
